Fixed some style/layout issues.

--- a/Speakcore.Web/Content/Site.css
+++ b/Speakcore.Web/Content/Site.css
@@ -6,7 +6,7 @@
 body {
     height: 100%;
     padding-top: 80px;
-    padding-bottom: 20px;
+    padding-bottom: 60px;
 }
 
 body {
@@ -25,14 +25,6 @@ body {
     background-color: #dedede;
     min-height: 80%;
 }
-
-/* Set widths on the form inputs since otherwise they're 100% wide */
-/*input,
-select,
-textarea {
-    max-width: 280px;
-}*/
-
 
 /* Responsive: Portrait tablets and up */
 @media screen and (min-width: 768px) {
@@ -93,4 +85,10 @@ form {
 
 .panel {
     width: 60%;
+}
+
+.footer {
+    background-color: #999;
+    position: relative;
+    min-height: 60px;
 }
